corrigindo alinhamento na pagina de detalhes

--- a/src/components/template/Header/style.scss
+++ b/src/components/template/Header/style.scss
@@ -32,6 +32,7 @@
         button{
             border: unset;
             background-color: unset;
+            padding: 0;
         }
 
         @media(max-width:821px){
