--- a/src/components/ProductPageComponents/Gallery/MobileGallery/style.scss
+++ b/src/components/ProductPageComponents/Gallery/MobileGallery/style.scss
@@ -1,9 +1,8 @@
 .mobile-swiper-container{
-    padding: 1rem;
-
+    margin-top: 1rem;
     .mobile-swipe-img{
         width: 100%;
-        height: 30rem;
+        height: 25rem;
         object-fit: cover;
     }
 
