ajustes na pagina de detalhes

--- a/src/components/ProductPageComponents/DateVisualizer/style.scss
+++ b/src/components/ProductPageComponents/DateVisualizer/style.scss
@@ -57,6 +57,7 @@
         }
            .rdrWeekDay{
                margin-right: 0.3rem;
+               color: var(--primary-orange);
            }
        }
     }
