--- a/src/pages/DetalhesReserva/style.scss
+++ b/src/pages/DetalhesReserva/style.scss
@@ -102,6 +102,7 @@
         }
 
         .mapaCampo{
+            margin-bottom: 1rem;
             .localizao-texto{
                 p{
                     margin: unset;
@@ -112,6 +113,7 @@
                     margin-top: 1rem;
                 }
             }
+
         }
 
         .detalhes-main-holder{
