--- a/src/pages/ConfirmacaoReserva/style.scss
+++ b/src/pages/ConfirmacaoReserva/style.scss
@@ -1,7 +1,6 @@
 .confirmacao-main-holder{
     background-color: var(--light-gray);
 
-
     & > .container{
         padding-top: 2rem;
         
@@ -15,13 +14,75 @@
         display: flex;
         gap: 1rem;
         margin-top: 12px;
-        div:nth-child(1){
-            width: 60%;
+        padding-bottom: 3rem;
+        & > div:nth-child(1){
+            width: 65%;
         }
 
-        div:nth-child(2){
-            width: 40%;
+        & > div:nth-child(2){
+            width: 35%;
+            background-color: var(--primary-white);
+            border-radius: 0.5rem;
+            
+            .detalhes-confirmacao-box{
+                display: flex;
+                flex-direction: column;
+
+                img{
+                    width: 100%;
+                    object-fit: cover;
+                }
+
+                .confirmacao-info{
+                    padding: 1rem;
+
+                    p,h4{
+                        margin: unset;
+                    }
+
+                    p{
+                        font-weight: 500;
+                        color: var(--secondary-deep-blue);
+                    }
+
+                    h4{
+                        margin-bottom: -3px;
+                    }
+
+                    .confirmacao-localizacao{
+                        margin-top: 10px;
+                        display: flex;
+                        gap: 5px
+                    } 
+                    
+                    .confirmacao-box-separator{
+                        background-color: var(--primary-orange);
+                        height: 2px;
+                    }
+
+                    .check-date{
+                        display: flex;
+                        justify-content: space-between;      
+                        
+                        p{
+                            font-size: 20px;
+                        }
+                    }
+
+                    .btn-confirmacao{
+                        width: 100%;
+                        padding: 0.75rem;
+                    }
+
+                }
+            }
         }
     }
 
+}
+
+
+.separador{
+    padding: 0.1rem;
+    background-color: var(--primary-orange);
 }
