--- a/src/pages/ConfirmacaoReserva/style.scss
+++ b/src/pages/ConfirmacaoReserva/style.scss
@@ -31,7 +31,7 @@
                 flex-direction: column;
                 flex-wrap: wrap;
 
-                .col-1, .col-2{
+                .column-1, .column-2{
                     width: 100%;
                     label{
                         margin: 10px;
