--- a/src/pages/ConfirmacaoReserva/style.scss
+++ b/src/pages/ConfirmacaoReserva/style.scss
@@ -16,15 +16,26 @@
 
     .confirmacao-conteudo{
         display: flex;
+        @media (max-width: 991px){
+            flex-direction: column;
+        }
         gap: 2.5rem;
         margin-top: 12px;
         padding-bottom: 3rem;  
         & > div:nth-child(1){
+            width: 65%;
 
-            @media (max-width: 1024px){
-                width: 70%;
+            @media (max-width: 1200px){
+                width: 60%;
+            }
+            @media (max-width: 991px){
+                width: 100%;
             }
             
+            .margin-top-padrao{
+                margin-top: 12px;
+            }
+
             .form-dados{
                 background: var(--primary-white);
                 width: 100%;
@@ -33,15 +44,23 @@
 
                 .column-1, .column-2{
                     width: 100%;
+                    @media(max-width: 526px){
+                        flex-direction: column;
+                    }
                     label{
                         margin: 10px;
+                        color: var(--secondary-deep-blue);
+                        font-weight: 500;
+                        flex: 1
                     }
 
                     input{
                         background-color: var(--secondary-grey);
-                        width: 260px;
+                        width: 100%;
                         height: 40px;
                         border-radius: 6%;
+                        padding: 10px;
+                        font-weight: 500;
                     }
                 }
             }
@@ -63,31 +82,86 @@
                         }  
 
                         .rdrDateDisplayWrapper{
-                            background-color: var(--secondary-deep-blue);
-
                             .rdrDateInput{
                                 input{
-                                    color: var(--primary-orange);
+                                    color: var(--secondary-deep-blue);
                                     font-weight: bold;
                                 }
                             }
                         }
                         .rdrMonth{
                             width: 50%;
+                            @media (max-width: 991px){
+                                width: 100%;
+                            }
                         }
                     }
                 }
             }
+
+            .horario-conteudo{
+                background-color: var(--primary-white);
+                position: relative;
+
+                p{
+                    margin: unset;
+                    color: var(--secondary-deep-blue);
+                    font-weight: 500;
+                }
+
+                .seletor-horario{
+                    width: 40%;
+                    @media(max-width: 820px){
+                        width: 45%;
+                    }
+                    border: 1px solid black;
+                    cursor: pointer;
+
+                   
+                    .seletor-display{
+                        width: 100%;
+                        
+                        &.white-hidden{
+                            color: white;
+                        }
+                    }
+                }
+
+                .lista-horario{
+                    position: absolute;
+                    width: calc(40% - 0.8rem);
+                    @media(max-width: 820px){
+                        width: calc(45% - 0.8rem);
+                    }
+                    z-index: 1;
+                    background-color: var(--primary-white);
+                    height: 200px;
+                    overflow-y: scroll;
+
+                    li{
+                        font-weight: 500;
+                        cursor: pointer;
+                        padding: 5px;
+                        margin-top: 1px;
+                        border-bottom: 1px solid black;
+                    }
+                }
+            }
+
         }
 
         & > div:nth-child(2){
             width: 35%;
             background-color: var(--primary-white);
 
-            @media (max-width: 1024px){
+            @media (max-width: 1200px){
                 width: 40%;
             }
             
+            @media (max-width: 991px){
+                width: 100%;
+            }
+
             .detalhes-confirmacao-box{
                 display: flex;
                 flex-direction: column;
@@ -136,6 +210,7 @@
                     .btn-confirmacao{
                         width: 100%;
                         padding: 0.75rem;
+                        font-size: 1.15rem;
                     }
 
                 }
