adicionando pagina expecifica para as buscas

--- a/src/styles/collors.scss
+++ b/src/styles/collors.scss
@@ -1,5 +1,6 @@
 :root {
     --primary-orange: #F0572D;
+    --light-orange: #ffe1d9;
     --primary-dark-orange: #a83110;
     --secondary-deep-blue: #31363F;
     --terciary-dark-gray: #191B1D;
