--- a/src/components/form/DateRangePicker/styles.scss
+++ b/src/components/form/DateRangePicker/styles.scss
@@ -3,6 +3,8 @@
 
     .date-range-picker {
         position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
         top : 48px;
         background-color: white;
 
