componentizaçao do checkbox e refatorações na pagina de busca

--- a/src/components/template/Chip/styles.scss
+++ b/src/components/template/Chip/styles.scss
@@ -2,6 +2,14 @@
     color: var(--primary-orange);
     background-color: var(--light-orange);
 
+    .label {
+        font-size: .8rem;
+    }
+
+    .text{
+        font-weight: 600;
+    }
+
     button {
         border: none;
         background: none;
