animaçoes para a pagina de buscas

--- a/src/components/template/Chip/styles.scss
+++ b/src/components/template/Chip/styles.scss
@@ -1,6 +1,7 @@
 .component-chip {
     color: var(--primary-orange);
     background-color: var(--light-orange);
+    animation: onMount 400ms ease-out both;
 
     .label {
         font-size: .8rem;
@@ -26,5 +27,22 @@
                 fill: red;
             }
         }
+    }
+
+    @keyframes onMount {
+        0% {
+            opacity: .5;
+            transform: scale(.8);
+        }
+        50%{
+            opacity: .7;
+            transform: scale(1.05);
+        }
+        100%{
+            opacity: 1;
+            transform: scale(1);
+        }
+
+        
     }
 }
