--- a/src/components/template/CategoryCardColection/styles.scss
+++ b/src/components/template/CategoryCardColection/styles.scss
@@ -1,4 +1,7 @@
 .component-categories-colection {
+    & * {
+        z-index: 0;
+    }
     display: grid;
     grid-template-columns: repeat(4, 1fr);
 
