--- a/src/components/template/CategoryCard/styles.scss
+++ b/src/components/template/CategoryCard/styles.scss
@@ -3,6 +3,10 @@
     max-width: 399px;
     height: 240px;
 
+    &.active {
+        border: 2px solid var(--primary-orange);
+    }
+
     .img-container {
         overflow: hidden;
         height: 160px;
