--- a/src/pages/Search/styles.scss
+++ b/src/pages/Search/styles.scss
@@ -20,19 +20,22 @@
         &.not-visible > h2 {
             display: none;
         }
-    }
+    } 
 
     @keyframes show {
         0% {
+            opacity: 0;
             transform: scaleY(0);
         }
         100% {
+            opacity: 1;
             transform: scaleY(1);
         }
     }
 
     @keyframes hidden {
         to {
+            opacity: 0;
             transform: scaleY(0);
             height: 0;
         }
