--- a/src/pages/DetalhesReserva/style.scss
+++ b/src/pages/DetalhesReserva/style.scss
@@ -100,6 +100,7 @@
             margin-top: 1rem;
             p{
                 margin: unset;
+                font-size: 1.3rem;
             }
         }
 
