--- a/src/components/template/Layout/styles.scss
+++ b/src/components/template/Layout/styles.scss
@@ -10,6 +10,12 @@
 
     & .main-content {
         margin-top: 68px;
+        display: grid;
+    
+        & > :only-child {
+            grid-column: 1 / -1;
+            grid-row: 1 / -1;
+        }
     }
        
     .default-header {
