--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -27,3 +27,9 @@ input {
 .drop-down {
     z-index: 1;
 }
+
+.flex-col-items-stretch {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
