--- a/src/components/form/CheckBox/styles.scss
+++ b/src/components/form/CheckBox/styles.scss
@@ -18,8 +18,8 @@
     }
     
     .btn-check:hover+.btn-outline-primary  {
-        background-color: var(--primary-orange);
-        opacity: .6;
+        background-color: #0000;
+        opacity: .8;
     }
     
     .btn-check:checked+.btn-outline-primary {
