--- a/src/components/template/HeaderItens/ProfileUI/style.scss
+++ b/src/components/template/HeaderItens/ProfileUI/style.scss
@@ -1,6 +1,7 @@
 .component-user-header{
     p{
         margin: unset;
+        font-weight: 500;
 
         &.texto-inferior{
             color: var(--primary-orange)
