--- a/src/components/ProductPageComponents/DetalhesCabecalho/style.scss
+++ b/src/components/ProductPageComponents/DetalhesCabecalho/style.scss
@@ -2,6 +2,7 @@
     background-color: var(--terciary-dark-gray);
     padding-top: 0.6rem;
     padding-bottom:0.6rem;
+    min-height: 78px;
 
     .cabecalhoTexto{
         color: var(--primary-white);
@@ -14,6 +15,10 @@
         
         h4{
             font-size: 1.4rem;
+
+            &.no-margin{
+                margin: unset;
+            }
         }
     }
 }
