--- a/src/components/template/Layout/styles.scss
+++ b/src/components/template/Layout/styles.scss
@@ -10,7 +10,7 @@
 
     & .main-content {
         margin-top: 68px;
-    
+        // display : grid  (Esta propriedade está comentada pois ela estava quebrando o mapa da página de detalhes)
         & > :only-child {
             grid-column: 1 / -1;
             grid-row: 1 / -1;
