implementação da página de favoritos e ajustes na pagina de detalhes

--- a/src/components/ProductPageComponents/DetalhesCabecalho/style.scss
+++ b/src/components/ProductPageComponents/DetalhesCabecalho/style.scss
@@ -12,13 +12,21 @@
 
         }
 
-        
-        h4{
-            font-size: 1.4rem;
+        .component-title{
+            font-weight: 600;
+            
+            &.not-sigle {
+                font-size: 1.4rem;
+            }
 
             &.no-margin{
                 margin: unset;
             }
         }
+    }
+
+    .goback-btn {
+        border: none;
+        background: none;
     }
 }
