--- a/src/pages/CriacaoReserva/style.scss
+++ b/src/pages/CriacaoReserva/style.scss
@@ -8,22 +8,26 @@
     .criacao-form{
         background-color: var(--primary-white);
 
-        & > div {
-            form{
+        & > form{
                 
                 .dois-input{
                     display: flex;
+
+                    @media(max-width: 767px){
+                        flex-direction: column;
+                        gap: unset !important;
+                    }
                 .criacao-categoria-holder{
                     position: relative;
                 }
     
                 & > .criacao-form-input, .criacao-categoria-holder{
                     flex: 1;
-                    margin-right: 10%;
                    label{
                     display: block;
                     font-weight: 500;
                     color: var(--secondary-deep-blue);
+                    margin-bottom: 4px;
                    }
 
                    .criacao-cidade-input{
@@ -43,11 +47,10 @@
                    ul{
                        background-color: var(--secondary-grey);
                        position: absolute;
-                       width: 100%;
                        max-height: 200px;
                        overflow-y: scroll;
                         li{
-                            padding: 10px;
+                            padding: 10px !important;
                             font-weight: 500;
                             border-bottom: 1px solid black;
                             cursor: pointer;                       
@@ -57,7 +60,6 @@
     
                    input, .criacao-categoria-input{
                        width: 100%;
-                       margin-top: 4px;
                        padding: 10px;
                        background-color: var(--secondary-grey);
                        height: 2.5rem;
@@ -73,24 +75,79 @@
                     & > p {
                         margin: unset;
                     }
-                   }
+                }
+
+
     
                 }
+            
             }
 
             .criacao-descricao{
-                margin-right: 10%;
+               
 
                 label{
                     font-weight: 500;
+                    margin-bottom: 4px;
                 }
 
                 textarea{
                     width: 100%;
+                    height: 10rem;
+                    padding: 10px;
                     background-color: var(--secondary-grey);
                     border: none;
+                    font-weight: 500;
                 }
             }
+
+
+        }
+    }
+
+    .criacao-atributos-holder{
+        .criacao-atributos{
+            font-weight: 500;
+            background: linear-gradient(to top, var(--light-orange) 50%, var(--secondary-grey) 50%);
+            background-size: 100% 200%;
+            background-position: top left;
+            transition: all .4s ease-out;
+            cursor: pointer;
+            height: 55px;
+
+            @media(max-width: 500px){
+                height: 103px;
+                flex-direction: column;
+                justify-content: center;
+            }
+
+            &.option-animation-in{
+                background-position: bottom left;
+            }
+            p{
+                margin: unset;
+            }
+        }
+
+        .atributo-indicador{
+            color: var(--primary-orange);
+            padding-left: 10px;
+            padding-right: 10px;
+            font-weight: 500;
+            margin: unset;
+        }
+    }
+
+    .criacao-politicas-holder{
+        .politicas-box{
+            
+            textarea{
+                width: 100%;
+                height: 10rem;
+                background-color: var(--secondary-grey);
+                border: none;
+                padding: 10px;
+                font-weight: 500;
             }
         }
     }
