--- a/src/pages/CriacaoReserva/style.scss
+++ b/src/pages/CriacaoReserva/style.scss
@@ -163,12 +163,28 @@
     .criacao-img-holder .img-input-box{
         background-color: var(--secondary-grey);
 
+        
+        @media(max-width: 767px){
+            flex-direction: column;
+        }
+
         .img-input-btn-box{
-            width: 30%;
+            width: 40%;
             display: flex;
+
+               
+        @media(max-width: 767px){
+            width: 100%;
+            margin-top: 20px;
+        }
+
 
             & > button {
                 flex: auto;
+                         
+            @media(max-width: 991px){
+                font-size: 0.85rem;
+                }
             }
         }
     }
@@ -179,6 +195,11 @@
         flex: 1;
         margin-right: 10px;
         font-weight: 500;
+
+        @media(max-width: 767px){
+            margin: unset;
+            width: 100%;
+        }
     }
 
     .criacao-confirm-btn{
