ajustes no sidebar com o user logado

--- a/src/components/template/Header/style.scss
+++ b/src/components/template/Header/style.scss
@@ -164,6 +164,14 @@
                     font-weight: 500;
                 }
 
+                & > button{
+                    border: none;
+                    padding: unset;
+                    font-weight: 500;
+                    color: black;
+                    background-color: unset;
+                }
+
                 .sidebar-section-separator{
                     padding: 1px;
                     width: 100%;
