quebra de linha no productCard e na pagina de detalhes

--- a/src/pages/DetalhesReserva/style.scss
+++ b/src/pages/DetalhesReserva/style.scss
@@ -92,6 +92,7 @@
             p{
                 margin: unset;
                 font-size: 1.3rem;
+                word-break: break-word;
             }
         }
 
