--- a/src/components/template/ProductCard/styles.scss
+++ b/src/components/template/ProductCard/styles.scss
@@ -21,6 +21,7 @@
             display: -webkit-box;
             -webkit-line-clamp: 2;
             -webkit-box-orient: vertical;
+            word-break: break-word;
         }
 
 
